data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1265.wast
;; 6. **Invalid Label Br in Imported Function:**    Create a test where an imported function tries to branch to an undefined label. This will address if error handling and the bounds check correctly prevent erroneous execution across module boundaries.

(assert_invalid
  (module
    (import "env" "imported_func" (func $imported_func))
    (func $test
      (call $imported_func)
      (br 1)
    )
  )
  "label index out of range"
)